tests/ui/codegen/evm-ir/validation/parse_deferred_overflow.evmir
@module DeferredOverflow

bb0:
  push_deferred 0x10000000 //~ ERROR: deferred constant ID exceeds the assembler limit
  stop
